--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,14 +1,9 @@
-body, html {
-    height: 100%;
-    background-color: black;
-    z-index: -1;
-}
-
 table, th, td {
+    color: black;
     border:1px solid black;
-    background-color: darkgreen;
 }
 
-.display{
-
+.gg{
+    color: black;
+    border:1px solid black;
 }
