--- a/src/main/resources/templates/createpokemon.html
+++ b/src/main/resources/templates/createpokemon.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Pokemon</title>
+    <link rel="stylesheet" th:href="@{style.css}" href="../static/style.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 
@@ -14,6 +16,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        margin-left: 5px;
     }
 </style>
 
@@ -49,7 +52,7 @@
     <label for="secondary_type">secondary type: </label>
     <input id="secondary_type" name="secondary_type" type="text">
 
-    <button style="margin-top: 5px" type="submit">Opret pokemon</button>
+    <button class="btn btn-success" style="margin-top: 5px" type="submit">Opret pokemon</button>
 </form>
 
 
