--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" th:href="@{style.css}" href="../static/style.css"/>
-
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" th:href="@{style.css}" href="../static/style.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
+<div class="container" style="resize: both">
 <h1>Pokemon liste</h1>
 <h2 >
     <a class="nav-link" href="createpokemon">Create pokemon</a>
@@ -14,83 +15,87 @@
 <table>
     <thead>
     <tr>
-        <th>
+        <th class="gg">
             Id
         </th>
-        <th>
+        <th class="gg">
             Name
         </th>
-        <th>
+        <th class="gg">
             speed
         </th>
-        <th>
+        <th class="gg">
             special defence
         </th>
-        <th>
+        <th class="gg">
             special attack
         </th>
-        <th>
+        <th class="gg">
             defence
         </th>
-        <th>
+        <th class="gg">
             attack
         </th>
-        <th>
+        <th class="gg">
             hp
         </th>
-        <th>
+        <th class="gg">
             primary type
         </th>
-        <th>
+        <th class="gg">
             secondary type
         </th>
 
-        <th>
+        <th class="gg">
             Delete
         </th>
 
-        <th>
+        <th class="gg">
             Update
         </th>
-        <th>
+        <th class="gg">
             image
         </th>
 
     </tr>
     </thead>
     <tbody>
-    <tr th:each="pokemons : ${pokemon}">
-        <td th:text="${pokemons.id}">
+    <tr class="gg" th:each="pokemons : ${pokemon}">
+        <td class="gg" th:text="${pokemons.id}">
         </td>
-        <td th:text="${pokemons.name}">
+        <td class="gg" th:text="${pokemons.name}">
         </td>
-        <td th:text="${pokemons.speed}">
+        <td class="gg" th:text="${pokemons.speed}">
         </td>
-        <td th:text="${pokemons.special_defence}">
+        <td class="gg" th:text="${pokemons.special_defence}">
         </td>
-        <td th:text="${pokemons.special_attack}">
+        <td class="gg" th:text="${pokemons.special_attack}">
         </td>
-        <td th:text="${pokemons.defence}">
+        <td class="gg" th:text="${pokemons.defence}">
         </td>
-        <td th:text="${pokemons.attack}">
+        <td class="gg" th:text="${pokemons.attack}">
         </td>
-        <td th:text="${pokemons.hp}">
+        <td class="gg" th:text="${pokemons.hp}">
         </td>
-        <td th:text="${pokemons.primary_type}">
+        <td class="gg" th:text="${pokemons.primary_type}">
         </td>
-        <td th:text="${pokemons.secondary_type}">
-        </td>
-        <td>
-            <a th:href="@{'/delete/' + ${pokemons.id}}"> delete </a>
+        <td class="gg" th:text="${pokemons.secondary_type}">
         </td>
         <td>
-            <a th:href="@{'/update/' + ${pokemons.id}}"> update </a>
+            <a th:href="@{'https://pokemon.gameinfo.io/en/pokemon/' + ${pokemons.id} + '-' + ${pokemons.name}}">
+                <img th:src="@{'https://raw.githubusercontent.com/pokeapi/sprites/master/sprites/pokemon/' + ${pokemons.id} + '.png'}" alt="No pokemon from this ID">
+            </a>
         </td>
-        <td>
-            <img th:src="@{'https://raw.githubusercontent.com/pokeapi/sprites/master/sprites/pokemon/' + ${pokemons.id} + '.png'}" alt="No pokemon from this ID">
+        <td class="gg">
+            <a class="btn btn-danger" th:href="@{'/delete/' + ${pokemons.id}}" role="button">Delete</a>
         </td>
+        <td class="gg">
+            <a class="btn btn-primary" th:href="@{'/update/' + ${pokemons.id}}" role="button">Update</a>
+        </td>
+
     </tr>
     </tbody>
 </table>
+</div>
 </body>
 </html>
